@@ -1,4 +1,6 @@
 release 1.1.5 (2010)
+- When tracing is enabled exceptions that are mapped to responses will be
+  logged.
 - Added formatted support when JSON with natural notation is used
 - Fixed issue 362
   https://jersey.dev.java.net/issues/show_bug.cgi?id=362
